Add: Env: API and Auth
