# agendly-api/app/Docs/Schemas/UserSchema.php
@@ -1,0 +1,18 @@
+<?php
+
+namespace App\Docs\Schemas;
+
+use OpenApi\Attributes as OA;
+
+#[OA\Schema(
+    schema: "User",
+    type: "object",
+    properties: [
+        new OA\Property(property: "id", type: "integer", example: 1),
+        new OA\Property(property: "name", type: "string", example: "Lucas Fajardo"),
+        new OA\Property(property: "email", type: "string", format: "email", example: "lucas@email.com"),
+        new OA\Property(property: "created_at", type: "string", format: "date-time"),
+        new OA\Property(property: "updated_at", type: "string", format: "date-time"),
+    ]
+)]
+class UserSchema {}
