# agendly-api/routes/api.php
@@ -1,8 +1,18 @@
 <?php
 
 use Illuminate\Support\Facades\Route;
+use App\Http\Controllers\AuthController;
+use App\Http\Controllers\UserController;
 use App\Http\Controllers\StudentController;
 
+// ROTAS PUBLICAS
 Route::prefix('v1')->group(function () {
+    Route::post('register', [AuthController::class, 'register']);
+    Route::post('login', [AuthController::class, 'login']);
+});
+
+// ROTAS PROTEGIDAS
+Route::prefix('v1')->middleware('auth:sanctum')->group(function () {
     Route::apiResource('students', StudentController::class);
+    Route::apiResource('users', UserController::class);
 });
